tests/ui/parser/use-colon-as-mod-sep.stderr
error: expected `::`, found `:`
  --> $DIR/use-colon-as-mod-sep.rs:3:17
   |
LL | use std::process:Command;
   |                 ^ help: use double colon
   |
   = note: import paths are delimited using `::`

error: expected `::`, found `:`
  --> $DIR/use-colon-as-mod-sep.rs:5:8
   |
LL | use std:fs::File;
   |        ^ help: use double colon
   |
   = note: import paths are delimited using `::`

error: expected `::`, found `:`
  --> $DIR/use-colon-as-mod-sep.rs:7:8
   |
LL | use std:collections:HashMap;
   |        ^ help: use double colon
   |
   = note: import paths are delimited using `::`

error: expected `::`, found `:`
  --> $DIR/use-colon-as-mod-sep.rs:7:20
   |
LL | use std:collections:HashMap;
   |                    ^ help: use double colon
   |
   = note: import paths are delimited using `::`

error: aborting due to 4 previous errors

